<resources>
    <string name="app_name">Money for travel</string>
    <string name="amount">Amount</string>
    <string name="tag">TAG</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="balance">Balance</string>
    <string name="sort">Sort</string>
    <string name="clear">Clear</string>
    <string name="value">Value</string>
    <string name="add_page">Add page</string>
    <string name="sort_page">Sort page</string>
    <string name="date">Date</string>
    <string name="card">Card</string>
    <string name="other">other</string>
    <string name="edit">Edit</string>
    <string name="not_available_now">Not available now</string>
</resources>
