<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSort"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/count"
            android:textColorHint="@color/colorWhite"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/count_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/tag_editText"
                android:inputType="numberDecimal|numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <my.rockpilgrim.moneyfortravel.view.sort.MultiToggleButton
            android:id="@+id/compare_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            app:pic1="@drawable/ic_more_black"
            app:pic2="@drawable/ic_less_black"
            app:pic3="@drawable/ic_equals_black"
            android:background="@color/colorAccent"/>

        <TextView
            android:gravity="center"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/value"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorWhite"
        android:hint="@string/tag"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tag_editText"
            android:nextFocusDown="@id/description_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete|textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/colorWhite"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_editText"
            android:nextFocusDown="@id/sort_button"
            android:inputType="textAutoComplete|textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
        <Button
            android:id="@+id/sort_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="4dp"
            android:focusable="true"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sort"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</LinearLayout>